[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

[dependencies]
# regex = "1.10.6"
thiserror = "1.0.63"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
